# pythonperf202405

./: .gitignore  Readme.md  decorators.ipynb  schemas.excalidraw  scientific_python.ipynb  text.ipynb
Iteration/: bazar.py  cities.csv  function_operator_cm.ipynb  iteration.ipynb
geo_using/: Readme.md  app.py
geometry/: circle.py  demo_classmethod.py  demo_comparisons.py  demo_computing_operator.py  demo_match.py  demo_surface_perimeter.py  mesurable.py  point.py  polygon.py  shape.py  weightedpoint.py
geometry/tests/: test_circle.py  test_point.py  test_polygon.py
geometry_dataclass/: point.py
geometry_pack/: Readme.md  pyproject.toml
geometry_pack/geo/: __init__.py
geometry_pack/geo/data/: __init__.py  circle.py  point.py  polygon.py  weightedpoint.py
geometry_pack/geo/demo/: demo_classmethod.py  demo_comparisons.py  demo_computing_operator.py  demo_match.py  demo_surface_perimeter.py
geometry_pack/tests/: test_circle.py  test_point.py  test_polygon.py
geometry_props/: point.py
multithreading/: app.py  app_multiprocess.py  app_multithread.py
